# impacker

./: AGENTS.md  README.ko-KR.md  README.md  out.py  pyproject.toml
impacker/: __init__.py  __main__.py  doc_remover.py  docstring_remover.py  impacker.py  import_group.py  import_resolve.py  resolve_path.py  source_code.py
impacker/cli/: __init__.py
impacker/core/: __init__.py  impacker.py  import_group.py  import_resolve.py  source_code.py
test/: __init__.py  code.py  source_code.py
test/bar/: __init__.py  x.py
test/bar/baz/: __init__.py
test/example/: README.md  t02.py  t03.py  t04.py  t05.py  t06.py
test/example/l01/: __init__.py  bar.py  foo.py
test/example/l02/: bar.py  foo.py
test/foo/: __init__.py  x.py  y.py
test/util/: __init__.py
